--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-virtuoso": "^4.7.10"
   },
   "devDependencies": {
     "eslint": "^8",
