--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
     "@mui/material-nextjs": "^5.15.11",
+    "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
+    "leaflet": "^1.9.4",
     "mongodb": "^6.6.2",
     "mongoose": "^8.3.5",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-leaflet": "^4.2.1",
     "react-virtuoso": "^4.7.10"
   },
   "devDependencies": {
