--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "leaflet": "^1.9.4",
+    "leaflet-pip": "^1.1.0",
     "mongodb": "^6.6.2",
     "mongoose": "^8.3.5",
     "next": "^14.2.3",
@@ -33,6 +34,7 @@
   "devDependencies": {
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "eslint-plugin-react": "^7.34.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
